retrait de srcs

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -12,17 +12,15 @@
 
 NAME = libft.a
 
-SRC = $(PATH)ft_atoi.c $(PATH)ft_bzero.c $(PATH)ft_isalnum.c $(PATH)ft_isalpha.c \
-	$(PATH)ft_isascii.c $(PATH)ft_isdigit.c $(PATH)ft_isprint.c $(PATH)ft_memcpy.c \
-	$(PATH)ft_memchr.c $(PATH)ft_memcmp.c $(PATH)ft_memccpy.c $(PATH)ft_memmove.c \
-	$(PATH)ft_memset.c $(PATH)ft_strchr.c $(PATH)ft_strlcat.c $(PATH)ft_strlcpy.c \
-	$(PATH)ft_strlen.c $(PATH)ft_strncmp.c $(PATH)ft_strnstr.c $(PATH)ft_tolower.c \
-	$(PATH)ft_toupper.c $(PATH)ft_substr.c $(PATH)ft_strjoin.c $(PATH)ft_split.c \
-	$(PATH)ft_strtrim.c
+SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c \
+	ft_isascii.c ft_isdigit.c ft_isprint.c ft_memcpy.c \
+	ft_memchr.c ft_memcmp.c ft_memccpy.c ft_memmove.c \
+	ft_memset.c ft_strchr.c ft_strlcat.c ft_strlcpy.c \
+	ft_strlen.c ft_strncmp.c ft_strnstr.c ft_tolower.c \
+	ft_toupper.c ft_substr.c ft_strjoin.c ft_split.c \
+	ft_strtrim.c
 
 OBJ = $(subst .c,.o,$(SRC))
-
-PATH = srcs/
 
 CFLAGS = -Wall -Werror -Wextra
 
