--- a/libft/Makefile
+++ b/libft/Makefile
@@ -12,22 +12,22 @@
 
 NAME = libft.a
 
-SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c \
-	ft_isascii.c ft_isdigit.c ft_isprint.c ft_memcpy.c \
-	ft_memchr.c ft_memcmp.c ft_memccpy.c ft_memmove.c \
-	ft_memset.c ft_strchr.c ft_strlcat.c ft_strlcpy.c \
-	ft_strlen.c ft_strncmp.c ft_strnstr.c ft_tolower.c \
-	ft_toupper.c ft_substr.c ft_strjoin.c ft_split.c \
+SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c \
+	ft_isprint.c ft_memcpy.c ft_memchr.c ft_memcmp.c ft_memccpy.c ft_memmove.c \
+	ft_memset.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c \
+	ft_strnstr.c ft_tolower.c ft_toupper.c ft_substr.c ft_strjoin.c ft_split.c \
 	ft_strtrim.c ft_calloc.c
 
 OBJ = $(subst .c,.o,$(SRC))
+
+HEADER = includes/libft.h
 
 CFLAGS = -Wall -Werror -Wextra
 
 all: $(NAME)
 
 $(NAME):
-	gcc $(CFLAGS) -c $(SRC)
+	gcc $(CFLAGS) -c -I $(HEADER) $(SRC)
 	ar rc $(NAME) $(OBJ)
 	ranlib $(NAME)
 
